syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.messaging";
option java_multiple_files = true;

import "api/messaging.proto";
import "rpc/misc.proto";

service MessagingService {
    rpc SendMessage (RequestSendMessage) returns (ResponseSendMessage);
    rpc LoadDialogs (RequestLoadDialogs) returns (ResponseLoadDialogs);
    rpc LoadHistory (RequestLoadHistory) returns (ResponseLoadHistory);
    rpc MessageReceived (RequestMessageReceived) returns (ResponseVoid);
    rpc MessageRead (RequestMessageRead) returns (ResponseVoid);
}

message RequestSendMessage {
    int64 chat_id = 1;

    // Id for message deduplication
    int64 random_id = 2;

    im.ghasedak.api.MessageContent message = 3;

    // If current message forwards some other
    im.ghasedak.api.ReferencedMessages forward = 4;

    // If current message is a reply on some other
    im.ghasedak.api.ReferencedMessages reply = 5;
}

message ResponseSendMessage {
    int32 sequence_nr = 1;
    int64 date = 2;
}

message RequestLoadDialogs {
    int64 min_date = 1;
    int32 limit = 2;
}

message ResponseLoadDialogs {
    repeated im.ghasedak.api.Dialog dialogs = 1;
}

message RequestLoadHistory {
    int64 chat_id = 1;
    int32 sequence_nr = 2;
    im.ghasedak.api.ListLoadMode load_mode = 3;
    int32 limit = 4;
}

message ResponseLoadHistory {
    repeated im.ghasedak.api.HistoryMessage history = 1;
}

message RequestMessageReceived {
    int64 chat_id = 1;
    int32 sequence_nr = 2;
}

message RequestMessageRead {
    int64 chat_id = 1;
    int32 sequence_nr = 2;
}